--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     color: #ffffff;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 head{
     color: yellow;
