--- a/express-static-file-tutorial/website/profile-page/page.css
+++ b/express-static-file-tutorial/website/profile-page/page.css
@@ -21,3 +21,34 @@
 hr{
     margin-top: 50px;
 }
+
+a {
+    list-style-type: none;
+    text-align: center;
+    padding: 10px;
+    color: orange;
+    height: 30px;
+  }
+
+a:link {
+    text-decoration: none;
+}
+
+header {  
+    background-color: rgb(112, 75, 7);  
+    position: fixed;  
+    left: 300px;  
+    right: 300px;  
+    top: 0px;  
+    height: 20px;  
+    display: solid;  
+    align-items: center;  
+}  
+
+header * {  
+    display: inline;
+}  
+
+header li {  
+    margin: 60px;  
+}  
