--- a/Stinger-Website/website/login-page/log.css
+++ b/Stinger-Website/website/login-page/log.css
@@ -13,6 +13,7 @@ body{
     text-align: center;
     color: green;
     font-weight: bold;
+    font-family:Arial, Helvetica, sans-serif;
 }
 #headline{
     text-align: center;
