--- a/Stinger-Website/website/signup/signup.css
+++ b/Stinger-Website/website/signup/signup.css
@@ -1,23 +1,27 @@
 #stinger{
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    color: #b8b212;
+    font-family:'Times New Roman', Times, serif;
+    color: #5f6b02;
     font-weight: bold;
 }
 body{
-    background-color:#85640b;
+    background-image: url('signupback.jpg');
+    background-size: cover;
 }
 #statement{
     text-align: center;
     color: black;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #fname{
     margin-left: 35%;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-family:Arial, Helvetica, sans-serif;
 }
 #fnamebox{
+    background-color: tomato;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -27,9 +31,11 @@ body{
 #lname{
     margin-left: 35%;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #lnamebox{
+    background-color: tomato;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -39,9 +45,11 @@ body{
 #username{
     margin-left: 35%;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #userbox{
+    background-color: tomato;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -51,9 +59,11 @@ body{
 #password{
     margin-left: 35%;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #passcode{
+    background-color: tomato;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -61,6 +71,7 @@ body{
     border-radius: 9px;
 }
 #signup_button{
+    background-color: yellow;
     position: absolute;
     border-radius: 9px;
     color: black;
@@ -71,7 +82,7 @@ body{
 #sentence{
     text-align: center;
     font-family: Tahoma;
-    color: #394d4d;
+    color: black;
     font-weight: bold;
     font-size: 20px;
 }
