--- a/Stinger-Website/website/style.css
+++ b/Stinger-Website/website/style.css
@@ -17,6 +17,7 @@ a {
     padding: 10px;
     color: orange;
     height: 30px;
+    font-family: 'Poppins', sans-serif;
   }
 
 a:link {
@@ -39,5 +40,5 @@ header * {
 }  
 
 header li {  
-    margin: 60px;  
+    margin: 70px;  
 }  
