--- a/Stinger-Website/website/signup/signup.css
+++ b/Stinger-Website/website/signup/signup.css
@@ -1,3 +1,8 @@
+*{
+    margin:0;
+    padding:0;
+}
+
 #stinger{
     text-align: center;
     font-family:'Times New Roman', Times, serif;
@@ -93,6 +98,7 @@ a {
     padding: 10px;
     color: orange;
     height: 30px;
+    font-family: 'Poppins', sans-serif;
   }
 
 a:link {
