--- a/Stinger-Website/website/signup/signup.css
+++ b/Stinger-Website/website/signup/signup.css
@@ -1,7 +1,7 @@
 #stinger{
     text-align: center;
     font-family:'Times New Roman', Times, serif;
-    color: #5f6b02;
+    color: black;
     font-weight: bold;
 }
 body{
