--- a/Stinger-Website/website/login-page/log.css
+++ b/Stinger-Website/website/login-page/log.css
@@ -1,17 +1,17 @@
 
 body{
-    background-image: url(stinger.jpg);
+    background-image: url(hive.jpg);
     background-position: center;
 }
 #stinger{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-    color: red;
+    color: #d3eb34;
     font-weight: bold;
 }
 #statement{
     text-align: center;
-    color: green;
+    color: #d3eb34;
     font-weight: bold;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -35,7 +35,7 @@ body{
 }
 #password{
     margin-left: 35%;
-    color: red;
+    color: #d3eb34;
 }
 #passcode{
     position: absolute;
@@ -55,7 +55,7 @@ body{
 #sentence{
     text-align: center;
     font-family: Tahoma;
-    color: red;
+    color: #d3eb34;
     font-weight: bold;
     font-size: 20px;
 }
