--- a/Stinger-Website/website/signup/signup.css
+++ b/Stinger-Website/website/signup/signup.css
@@ -5,7 +5,7 @@
 
 #stinger{
     text-align: center;
-    font-family:'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-weight: bold;
 }
@@ -26,7 +26,7 @@ body{
     font-family:Arial, Helvetica, sans-serif;
 }
 #fnamebox{
-    background-color: tomato;
+    background-color: white;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -40,7 +40,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 #lnamebox{
-    background-color: tomato;
+    background-color: white;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -54,7 +54,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 #userbox{
-    background-color: tomato;
+    background-color: white;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -68,7 +68,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 #passcode{
-    background-color: tomato;
+    background-color: white;
     position: absolute;
     margin-left: 39%;
     width: 20%;
