--- a/Stinger-Website/website/style.css
+++ b/Stinger-Website/website/style.css
@@ -2,7 +2,7 @@ body{
     background-color: #545454;
     color: #ffffff;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     margin-left: 300px;
     margin-right: 300px;
 }
