--- a/Stinger-Website/website/signup/signup.css
+++ b/Stinger-Website/website/signup/signup.css
@@ -6,22 +6,22 @@
 #stinger{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 body{
-    background-image: url('signupback.jpg');
+    background-image: url('trees.jpg');
     background-size: cover;
 }
 #statement{
     text-align: center;
-    color: black;
+    color: white;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 #fname{
     margin-left: 35%;
-    color: black;
+    color: white;
     font-weight: bold;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -35,7 +35,7 @@ body{
 }
 #lname{
     margin-left: 35%;
-    color: black;
+    color: white;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -49,7 +49,7 @@ body{
 }
 #username{
     margin-left: 35%;
-    color: black;
+    color: white;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -63,7 +63,7 @@ body{
 }
 #password{
     margin-left: 35%;
-    color: black;
+    color: white;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -87,7 +87,7 @@ body{
 #sentence{
     text-align: center;
     font-family: Tahoma;
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 20px;
 }
