--- a/Stinger-Website/website/views/contact.ejs
+++ b/Stinger-Website/website/views/contact.ejs
@@ -5,16 +5,16 @@
     <nav>  
     <ul>  
     <li>  
-    <a onclick="window.open('../index.html', '_blank')">Home</a>  
+    <a href='index'>Home</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../login-page/login.html', '_blank')">Login</a>  
+    <a href='login'>Login</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../contact-page/contactus.html', '_blank')">Contact</a>  
+    <a href='contact'>Contact</a>  
     </li>  
     <li> 
-    <a onclick="window.open('../about-page/about.html', '_blank')">About</a>  
+    <a href='about'>About</a>  
     </li>  
     </ul>  
     </nav>  
