--- a/Stinger-Website/website/views/profile1.ejs
+++ b/Stinger-Website/website/views/profile1.ejs
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
 
+    <%#Navigation Bar%>
     <header>  
     <nav>  
     <ul>  
     <li>  
-    <a onclick="window.moveTo('../views/index', '_blank')">Home</a>  
+    <a href='index'>Home</a>  
     </li>  
     <li>  
-    <a onclick="window.moveTo('../login-page/login.html', '_blank')">Login</a>  
+    <a href='login'>Login</a>  
     </li>  
     <li>  
-    <a onclick="window.moveTo('../contact-page/contact.html', '_blank')">Contact</a>  
+    <a href='contact'>Contact</a>  
     </li>  
     <li> 
-    <a onclick="window.moveTo('#', '_blank')">About</a>  
+    <a href='about'>About</a>
     </li>  
     </ul>  
     </nav>  
@@ -35,12 +36,11 @@
 </head>
 <body>
 
+<%#Sample Profile Page%>
 
 <h2 style= "text-align: left">Name: Frank Deamatro</h2>   
 <h1 style= "text-align: left">User Name: @FrankfurterDeamatro</h1> 
 <p>Born March 16th, 2000                              Joined April 6th, 2016</p>
-
-
 
 
 <h1 style= "text-align: left">See your posts!</h1>
@@ -57,13 +57,7 @@
 
 <hr>
 <img src="../wasp.png" alt="Stinger" height=100>
-
-
-
-
-
-
-    <script src="../script.js"></script>
+<script src="../script.js"></script>
 
 </body>
 </html>
