--- a/Stinger-Website/website/public/log.css
+++ b/Stinger-Website/website/public/log.css
@@ -1,60 +1,31 @@
-*{
-    margin:0;
-    padding:0;
+body{
+    background-image: url(hive.jpg);
+    background-position: center;
 }
-
 #stinger{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: #d3eb34;
     font-weight: bold;
-}
-body{
-    background-image: url('trees.jpg');
-    background-size: cover;
 }
 #statement{
     text-align: center;
-    color: white;
+    color: #d3eb34;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
-#fname{
-    margin-left: 35%;
-    color: white;
-    font-weight: bold;
-    font-family:Arial, Helvetica, sans-serif;
-}
-#fnamebox{
-    background-color: white;
-    position: absolute;
-    margin-left: 39%;
-    width: 20%;
-    padding: 2px;
-    border-radius: 9px;
-}
-#lname{
-    margin-left: 35%;
-    color: white;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#lnamebox{
-    background-color: white;
-    position: absolute;
-    margin-left: 39%;
-    width: 20%;
-    padding: 2px;
-    border-radius: 9px;
+#headline{
+    text-align: center;
+    color: #d3eb34;
+    font-size: 20px;
+    font-weight: bolder;
 }
 #username{
     margin-left: 35%;
-    color: white;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #e5eb34;
+    font-family: Candara;
 }
 #userbox{
-    background-color: white;
     position: absolute;
     margin-left: 39%;
     width: 20%;
@@ -63,20 +34,16 @@ body{
 }
 #password{
     margin-left: 35%;
-    color: white;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #d3eb34;
 }
 #passcode{
-    background-color: white;
     position: absolute;
     margin-left: 39%;
     width: 20%;
     padding: 2px;
     border-radius: 9px;
 }
-#signup_button{
-    background-color: yellow;
+#login_button{
     position: absolute;
     border-radius: 9px;
     color: black;
@@ -87,7 +54,7 @@ body{
 #sentence{
     text-align: center;
     font-family: Tahoma;
-    color: white;
+    color: #d3eb34;
     font-weight: bold;
     font-size: 20px;
 }
@@ -99,6 +66,7 @@ a {
     color: orange;
     height: 30px;
     font-family: 'Poppins', sans-serif;
+
   }
 
 a:link {
@@ -114,7 +82,7 @@ header {
     height: 20px;  
     display: solid;  
     align-items: center;  
-}  
+}
 
 header * {  
     display: inline;
