--- a/Stinger-Website/website/views/index.ejs
+++ b/Stinger-Website/website/views/index.ejs
@@ -39,7 +39,7 @@
 
     <p> 9/20/21 3:00 PM <br>
             <input class="profiles" type="button" value="@GoneLikeJackDorsey"
-            href='profile1.ejs'> 
+            href='profile1'> 
             <br>
         Hey, I just found this website that allows you to generate domain names. I think its pretty sick. Now I don’t have to come up with names on my own anymore.
         Link: https://www.nameboy.com/</p>
@@ -47,8 +47,8 @@
     <hr>
 
     <p>9/20/21 3:30 PM <br>
-        <input class="profiles" type="button" value="@JohnDoe123"
-            onclick="window.open('profile.html', '_blank')"> 
+        <input class="profiles" type="button" value="@signup"
+            href='signup'> 
          <br>
         
         Wow, you’re right. This thing is pretty cool. This can help me out a lot with my future projects as a web developer.</p>
