Easier way to access signup

--- a/Stinger-Website/website/views/index.ejs
+++ b/Stinger-Website/website/views/index.ejs
@@ -48,7 +48,7 @@
 
     <p>9/20/21 3:30 PM <br>
         <input class="profiles" type="button" value="@signup"
-            href='signup'> 
+            href='#'> 
          <br>
         
         Wow, you’re right. This thing is pretty cool. This can help me out a lot with my future projects as a web developer.</p>
