--- a/Stinger-Website/website/views/login.ejs
+++ b/Stinger-Website/website/views/login.ejs
@@ -39,7 +39,7 @@
     <input type='text' id='passcode' name='password'><br><br>
     <button id='login_button'>Log in</button><br>
     <p id='sentence'>Forgot password?</p>
-    <p id='sentence' href='about'>New to Stinger? Join us here.</p>
+    <a id='sentence' href='signup'>New to Stinger? Join us here.</p>
 </form>
 
 </body>
