--- a/Stinger-Website/website/views/signup.ejs
+++ b/Stinger-Website/website/views/signup.ejs
@@ -44,7 +44,7 @@
         <p id='password'>Password:</p>
         <input type='text' id='passcode' name='password'><br><br><br>
         <button id='signup_button'>Sign Up</button><br>
-        <p id='sentence' href='login'>Already a member? Log in here.</p>
+        <a id='sentence' href='login'>Already a member? Log in here.</a>
     </form>
     
 </body>
