--- a/Stinger-Website/website/views/about.ejs
+++ b/Stinger-Website/website/views/about.ejs
@@ -2,25 +2,8 @@
 <html lang="en">
 <head>
 
-<header>  
-	<nav>  
-	<ul>  
-	<li>  
-	<a href='index'>Home</a>  
-	</li>  
-	<li>  
-	<a href='login'>Login</a>  
-	</li>
-	<li>  
-	<a href='contact'>Contact</a>  
-	</li>  
-	<li> 
-	<a href='about'>About</a>  
-	</li>  
-	</ul>  
-	</nav>  
-	</header>
-
+	<%#Navigation Bar%>
+	<%- include('./partials/nav-bar.ejs') %>
 
 	<title>About Us Section</title>
 	<meta charset="utf-8">
