--- a/Stinger-Website/website/views/index.ejs
+++ b/Stinger-Website/website/views/index.ejs
@@ -2,25 +2,9 @@
 <html lang="en">
 <head>
 
-<%#Navigation Bar%>
-    <header>  
-    <nav>  
-    <ul>  
-    <li>  
-    <a href='index'>Home</a>  
-    </li>  
-    <li>  
-    <a href='login'>Login</a>
-    </li>
-    <li>  
-    <a href='contact'>Contact</a>  
-    </li>  
-    <li> 
-    <a href='about'>About</a>
-    </li>  
-    </ul>  
-    </nav>  
-    </header>
+    <%#Navigation Bar%>
+    <%- include('./partials/nav-bar.ejs') %>
+
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,71 +27,6 @@
             <br>
         Hey, I just found this website that allows you to generate domain names. I think its pretty sick. Now I don’t have to come up with names on my own anymore.
         Link: https://www.nameboy.com/</p>
-
-    <hr>
-
-    <p>9/20/21 3:30 PM <br>
-        <input class="profiles" type="button" value="@signup"
-            href='#'> 
-         <br>
-        
-        Wow, you’re right. This thing is pretty cool. This can help me out a lot with my future projects as a web developer.</p>
-
-    <hr>
-
-   <p>9/20/21 4:30pm <br>
-    <input class="profiles" type="button" value="@FrankfurterDeamatro"
-            onclick="window.open('profile.html', '_blank')"> 
-        <br>
-       Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>
-
-
-   <hr>
-
-
-    <p>9/20/21 4:45pm <br>
-        <input class="profiles" type="button" value="@Dominion1"
-            onclick="window.open('profile.html', '_blank')"> 
-         <br>
-        Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
-
-    <hr>
-
-    <p>9/21/21 4:30 AM <br>
-        <input class="profiles" type="button" value="@AƵ@Ƶ3L"
-            onclick="window.open('profile.html', '_blank')"> 
-         <br>
-        Mischief you say? Mischief is quite a strong-suit of mine, really hope nothing bad happens…</p>
-
-    <hr>
-
-    <p>9/21/21 12:41 PM <br>
-        <input class="profiles" type="button" value="@doged"
-            onclick="window.open('profile.html', '_blank')"> 
-         <br>
-        
-        Oh god no, please no not again, WE HAD TO REFRESH THE WEBSITE BEFORE NOOOOOOOOOOOOO</p>
-
-    <hr>
-
-    <p>9/22/21 3:42 AM <br>
-        <input class="profiles" type="button" value="@brenda78"
-            onclick="window.open('profile.html', '_blank')"> 
-         <br>
-        
-        Check out this new painting of mine, it took me 17 hours. Hope you enjoy</p>
-        
-        <img src="badpic.jpg" alt="@dlx11" height=150>
-    <hr>
-
-
-    <p>9/22/21 6:50 PM <br>
-        <input class="profiles" type="button" value="@dlx11"
-            onclick="window.open('profile.html', '_blank')"> 
-         <br>
-        
-        Finally off work. If my boss keeps testing me I’m never coming in again</p>
-        
 
     <hr>
     <script src="script.js"></script>
