--- a/Stinger-Website/website/views/profile1.ejs
+++ b/Stinger-Website/website/views/profile1.ejs
@@ -3,24 +3,8 @@
 <head>
 
     <%#Navigation Bar%>
-    <header>  
-    <nav>  
-    <ul>  
-    <li>  
-    <a href='index'>Home</a>  
-    </li>  
-    <li>  
-    <a href='login'>Login</a>  
-    </li>  
-    <li>  
-    <a href='contact'>Contact</a>  
-    </li>  
-    <li> 
-    <a href='about'>About</a>
-    </li>  
-    </ul>  
-    </nav>  
-    </header>  
+    <%- include('./partials/nav-bar.ejs') %>
+ 
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
