--- a/Stinger-Website/website/views/signup.ejs
+++ b/Stinger-Website/website/views/signup.ejs
@@ -2,25 +2,9 @@
 <html lang="en">
 <head>
 
-<%#Navigation Bar%>
-    <header>  
-    <nav>  
-    <ul>  
-    <li>  
-    <a href='index'>Home</a>  
-    </li>  
-    <li>  
-    <a href='login'>Login</a>  
-    </li>  
-    <li>  
-    <a href='contact'>Contact</a>  
-    </li>  
-    <li> 
-    <a href='about'>About</a>  
-    </li>  
-    </ul>  
-    </nav>  
-    </header>  
+    <%#Navigation Bar%>
+    <%- include('./partials/nav-bar.ejs') %>
+
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
