--- a/Stinger-Website/website/public/style.css
+++ b/Stinger-Website/website/public/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: #545454;
-    color: #ffffff;
+    background-color: #999999;
+    color: #000000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 300px;
