--- a/Stinger-Website/website/views/login.ejs
+++ b/Stinger-Website/website/views/login.ejs
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stinger: Login</title>
-    <link rel="stylesheet" href="log.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
 <h1 id='stinger'>Stinger</h1>
