--- a/Stinger-Website/website/views/about.ejs
+++ b/Stinger-Website/website/views/about.ejs
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-	<link rel="stylesheet" type="text/css" href="ab.css">
+	<link rel="stylesheet" type="text/css" href="about.css">
 </head>	
 <body>
 	<div class="section">
@@ -23,9 +23,6 @@
 					<p>Stinger is a place where you can make a jab at others, as long as you don't mind getting poked back. We created Stinger to make a fun environment
 						where things aren't taken too seriously. Happy stinging!
 					</p>
-					<div class="button">
-						<a href="">Read More</a>
-					</div>
 				</div>
 			</div>
 			<div class="image-section">
