--- a/Stinger-Website/website/views/login.ejs
+++ b/Stinger-Website/website/views/login.ejs
@@ -22,8 +22,8 @@
     <p id='password'>Password:</p>
     <input type='text' id='passcode' name='password'><br><br>
     <button id='login_button'>Log in</button><br>
-    <p id='sentence'>Forgot password?</p>
-    <a id='sentence' href='signup'>New to Stinger? Join us here.</p>
+    <br>
+    <a id='signup', href='signup'>New to Stinger? Join us here.</p>
 </form>
 </body>
 </html>
