--- a/Stinger-Website/website/views/signup.ejs
+++ b/Stinger-Website/website/views/signup.ejs
@@ -16,15 +16,14 @@
     <br>
     <h1 id='stinger'>Stinger</h1>
 <%#The login boxes to sign up within the website%>
-    <br>
     <h2 id='statement'>Welcome to Stinger. Get ready to sting.</h2>
     <form>
         <p id='username'>Username:</p>
         <input type='text' id='userbox' name='username'><br>
         <p id='password'>Password:</p>
-        <input type='text' id='passcode' name='password'><br><br><br>
-        <button id='signup_button'>Sign Up</button><br>
-        <a id='sentence' href='login'>Already a member? Log in here.</a>
+        <input type='text' id='passcode' name='password'><br><br>
+        <button id='signup_button'>Sign Up</button><br><br>
+        <a id='login' href='login'>Already a member? Log in here.</a>
     </form>
     
 </body>
