--- a/Stinger-Website/website/public/login.css
+++ b/Stinger-Website/website/public/login.css
@@ -1,5 +1,6 @@
 *{
     color: black;
+    text-align: center;
 }
 
 body{
@@ -25,30 +26,37 @@ body{
     margin-left: 35%;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+
 }
 #userbox{
-    position: absolute;
+    position: relative;
     margin-left: 39%;
+    right: 20%;
     width: 20%;
     padding: 2px;
     border-radius: 9px;
 }
 #password{
     margin-left: 35%;
+    text-align: left;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 #passcode{
-    position: absolute;
+    position: relative;
     margin-left: 39%;
+    right: 20%;
     width: 20%;
     padding: 2px;
     border-radius: 9px;
 }
 #login_button{
     background-color: #f4c73e;
-    position: absolute;
+    text-align: center;
     border-radius: 9px;
+    position: relative;
+    right: 20%;
     color: black;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
@@ -63,6 +71,16 @@ body{
     font-size: 20px;
 }
 
+#signup {
+    list-style-type: none;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+    color: black;
+    height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 a {
     list-style-type: none;
     text-align: center;
@@ -70,7 +88,6 @@ a {
     color: orange;
     height: 30px;
     font-family: 'Poppins', sans-serif;
-
   }
 
 a:link {
