--- a/Stinger-Website/website/public/signup.css
+++ b/Stinger-Website/website/public/signup.css
@@ -1,6 +1,6 @@
 *{
-    margin:0;
-    padding:0;
+    color: black;
+    text-align: center;
 }
 
 #stinger{
@@ -21,13 +21,15 @@ body{
 }
 #username{
     margin-left: 35%;
+    text-align: left;
     color: black;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 #userbox{
     background-color: white;
-    position: absolute;
+    position: relative;
+    right: 20%;
     margin-left: 39%;
     width: 20%;
     padding: 2px;
@@ -35,13 +37,15 @@ body{
 }
 #password{
     margin-left: 35%;
+    text-align: left;
     color: black;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 #passcode{
     background-color: white;
-    position: absolute;
+    position: relative;
+    right: 20%;
     margin-left: 39%;
     width: 20%;
     padding: 2px;
@@ -49,7 +53,8 @@ body{
 }
 #signup_button{
     background-color: #f4c73e;
-    position: absolute;
+    position: relative;
+    right: 20%;
     border-radius: 9px;
     color: black;
     font-weight: bold;
@@ -62,6 +67,16 @@ body{
     color: black;
     font-weight: bold;
     font-size: 20px;
+}
+
+#login {
+    list-style-type: none;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+    color: black;
+    height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
