--- a/Stinger-Website/website/views/partials/nav-bar.ejs
+++ b/Stinger-Website/website/views/partials/nav-bar.ejs
@@ -2,16 +2,16 @@
   <nav>  
   <ul>  
   <li>  
-  <a href='index'>Home</a>  
+  <a id='navbar', href='index'>Home</a>  
   </li>  
   <li>  
-  <a href='login'>Login</a>
+  <a id='navbar', href='login'>Login</a>
   </li>
   <li>  
-  <a href='contact'>Contact</a>  
+  <a id='navbar', href='contact'>Contact</a>  
   </li>  
   <li> 
-  <a href='about'>About</a>
+  <a id='navbar', href='about'>About</a>
   </li>  
   </ul>  
   </nav>  
