--- a/Stinger-Website/website/views/partials/nav-bar.ejs
+++ b/Stinger-Website/website/views/partials/nav-bar.ejs
@@ -1,4 +1,4 @@
-<header>  
+<header id="wrapper">  
   <nav>  
   <ul>  
   <li>  
@@ -12,7 +12,7 @@
   </li>  
   <li> 
   <a id='navbar', href='about'>About</a>
-  </li>  
+  </li>
   </ul>  
   </nav>  
   </header>
