--- a/Stinger-Website/website/public/style.css
+++ b/Stinger-Website/website/public/style.css
@@ -7,6 +7,12 @@ body{
     margin-right: 300px;
 }
 
+#wrapper {
+    margin-left:auto;
+    margin-right:auto;
+    width:960px;
+}
+
 head{
     color: yellow;
 }
@@ -28,6 +34,7 @@ header {
     background-color: rgb(112, 75, 7);  
     position: fixed;  
     left: 300px;  
+
     right: 300px;  
     top: 0px;  
     height: 20px;  
