--- a/Stinger-Website/website/views/login.ejs
+++ b/Stinger-Website/website/views/login.ejs
@@ -12,7 +12,7 @@
     <title>Stinger: Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
-<body>
+<body id="wrapper">
 <h1 id='stinger'>Stinger</h1>
 <h2 id='statement'>Welcome back.</h2>
 <p id='headline'>Don't miss your opportunity to sting more people.</p>
