--- a/Stinger-Website/website/views/signup.ejs
+++ b/Stinger-Website/website/views/signup.ejs
@@ -12,7 +12,7 @@
     <title>Stinger: Sign Up</title>
     <link rel='stylesheet' href='signup.css'>
 </head>
-<body>
+<body id="wrapper">
     <br>
     <h1 id='stinger'>Stinger</h1>
 <%#The login boxes to sign up within the website%>
