--- a/Stinger-Website/website/public/contactus.css
+++ b/Stinger-Website/website/public/contactus.css
@@ -1,6 +1,6 @@
 *{
-    margin:0;
-    padding:0;
+    color: black;
+    text-align: center;
 }
 body{
     background: #999999;
@@ -88,13 +88,8 @@ tr td{
     padding-top: 20px;
 }
 
-.nav-bar a{
-    list-style-type: none;
-    text-align: center;
-    padding: 10px;
-    color: orange;
-    height: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+#wrapper {
+	justify-content: center;
 }
 
 a {
@@ -116,9 +111,9 @@ header {
     left: 300px;  
     right: 300px;  
     top: 0px;  
-    height: 20px;  
-    display: solid;  
-    align-items: center;  
+    height: 20px;
+    display: solid;
+    align-items: center;
 }  
 
 header * {  
@@ -126,5 +121,5 @@ header * {
 }  
 
 header li {  
-    margin: 75px;  
+    margin: 70px;  
 }  
