--- a/Stinger-Website/website/public/signup.css
+++ b/Stinger-Website/website/public/signup.css
@@ -92,6 +92,11 @@ a:link {
     text-decoration: none;
 }
 
+#wrapper {
+	justify-content: center;
+}
+
+
 header {  
     background-color: rgb(112, 75, 7);  
     position: fixed;  
@@ -108,5 +113,5 @@ header * {
 }  
 
 header li {  
-    margin: 75px;  
+    margin: 70px;  
 }  
