--- a/Stinger-Website/website/views/about.ejs
+++ b/Stinger-Website/website/views/about.ejs
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 	<link rel="stylesheet" type="text/css" href="about.css">
 </head>	
-<body>
+<body id="wrapper">
 	<div class="section">
 		<div class="container">
 			<div class="content-section">
