--- a/Stinger-Website/website/views/contact.ejs
+++ b/Stinger-Website/website/views/contact.ejs
@@ -13,7 +13,7 @@
     rel="stylesheet">
     <title>Contact Us</title>
 </head>
-<body>
+<body id="wrapper">
     <div class="container">
         <h1>Connect With Us</h1>
         <p>We would love to hear from you. <br>
