--- a/Stinger-Website/website/views/index.ejs
+++ b/Stinger-Website/website/views/index.ejs
@@ -16,7 +16,7 @@
     <h1>Stinger</h1>
     <%#The example posts in the home page%>
     <p> 9/20/21 3:00 PM <br>
-        <form action='profile1'><input type="submit" value="@GoneLikeJackDorsey" /></form><br>
+        <form action='profilecard'><input type="submit" value="@GoneLikeJackDorsey" /></form><br>
         Hey, I just found this website that allows you to generate domain names. I think its pretty sick. Now I don’t have to come up with names on my own anymore. Link: https://www.nameboy.com/</p>
     <hr>
     <script src="script.js"></script>
