--- a/Stinger-Website/website/views/partials/footer.ejs
+++ b/Stinger-Website/website/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">&copy; Copyright 2021 Your Mom lol</p>
+<p class="text-center text-muted">&copy; Copyright 2021</p>
