Removed some unnecessary text, Improved some messages, added a requirement and hidden password files for signup and login

--- a/Stinger-Website/website/views/login.ejs
+++ b/Stinger-Website/website/views/login.ejs
@@ -19,8 +19,8 @@
 <form>
     <p id='username'>Username:</p>
     <input type='text' id='userbox' name='username'><br>
-    <p id='password'>Password:</p>
-    <input type='text' id='passcode' name='password'><br><br>
+    <p id='password'>Password (Minimum of 6 characters required):</p>
+    <input type='password' id='passcode' name='password' minlength="6" required><br><br>
     <button id='login_button'>Log in</button><br>
     <br>
     <a id='signup', href='signup'>New to Stinger? Join us here.</p>
