--- a/Stinger-Website/website/views/signup.ejs
+++ b/Stinger-Website/website/views/signup.ejs
@@ -20,8 +20,8 @@
     <form>
         <p id='username'>Username:</p>
         <input type='text' id='userbox' name='username'><br>
-        <p id='password'>Password:</p>
-        <input type='text' id='passcode' name='password'><br><br>
+        <p id='password'>Password (Minimum of 6 characters required):</p>
+        <input type='password' id='passcode' name='password' minlength="6" required><br><br>
         <button id='signup_button'>Sign Up</button><br><br>
         <a id='login' href='login'>Already a member? Log in here.</a>
     </form>
