--- a/Stinger-Website/website/views/contact.ejs
+++ b/Stinger-Website/website/views/contact.ejs
@@ -21,8 +21,10 @@
         <div class="contact-box">
             <div class="contact-left">
                 <h3>Send your request</h3>
-                <form>
+                
 
+                
+                <form action="mailto:stingerwebsitedummy@gmail.com">
                     <div class="input-row">
                         <div class="input-group">
                             <label>Name</label>
