Commented out some code so passport wouldn't get in the way of functionality, commented some parts for documentation purposes, and moved some server stuff around for node_modules
Should be the final commit, if you have any questions, just shoot us an email on Outlook

--- a/Stinger-Website/website/views/contact.ejs
+++ b/Stinger-Website/website/views/contact.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     
-    <%#Navigation Bar%>
+<!--Navigation Bar-->
     <%- include('./partials/nav-bar.ejs') %>
 
     <meta charset="UTF-8">
@@ -21,29 +21,26 @@
         <div class="contact-box">
             <div class="contact-left">
                 <h3>Send your request</h3>
-                
-
-                
                 <form action="mailto:stingerwebsitedummy@gmail.com">
                     <div class="input-row">
-                        <div class="input-group">
-                            <label>Name</label>
-                            <input type='text' placeholder='John Smith'>
-                        </div>
-                        <div class="input-group">
-                            <label>Phone</label>
-                            <input type='text' placeholder='+1 567 823 3389'>
-                        </div>
+                    <div class="input-group">
+                    <label>Name</label>
+                    <input type='text' placeholder='John Smith'>
+                    </div>
+                    <div class="input-group">
+                    <label>Phone</label>
+                    <input type='text' placeholder='+1 567 823 3389'>
+                    </div>
                     </div>
                     <div class="input-row">
-                        <div class="input-group">
-                            <label>Email</label>
-                            <input type='text' placeholder='johnsmith@gmail.com'>
-                        </div>
-                        <div class="input-group">
-                            <label>Subject</label>
-                            <input type='text' placeholder='Product Demo'>
-                        </div>
+                    <div class="input-group">
+                    <label>Email</label>
+                    <input type='text' placeholder='johnsmith@gmail.com'>
+                    </div>
+                    <div class="input-group">
+                    <label>Subject</label>
+                    <input type='text' placeholder='Product Demo'>
+                    </div>
                     </div>
                     <label>Message</label>
                     <textarea rows="5" placeholder="Your Message"></textarea>
@@ -51,28 +48,27 @@
                 </form>
             </div>
             <div class="contact-right">
-                <h3>Reach Us Via Email</h3>
-                <table>
-                    <tr>
-                        <td>Henry Foreman</td>
-                        <td><a href="mailto:Foremanhj03@gmail.com">Foremanhj03@gmail.com</a></td>
-                    </tr>
-                    <tr>
-                        <td>Alphonse Vota</td>
-                        <td><a href="mailto:allieboy2402@gmail.com">allieboy2402@gmail.com</a></td>
-                    </tr>
-                    <tr>
-                        <td>Michael Laffan</td>
-                        <td><a href="mailto:MichaelLaff10211@gmail.com">MichaelLaff10211@gmail.com</a></td>
-                    </tr>
-                    <tr>
-                        <td>Reed Percelay</td>
-                        <td><a href="mailto:Reedpercelay@gmail.com">Reedpercelay@gmail.com</a></td>
-                    </tr>
-                </table>
+            <h3>Reach Us Via Email</h3>
+            <table>
+            <tr>
+            <td>Henry Foreman</td>
+            <td><a href="mailto:Foremanhj03@gmail.com">Foremanhj03@gmail.com</a></td>
+            </tr>
+            <tr>
+            <td>Michael Laffan</td>
+            <td><a href="mailto:MichaelLaff10211@gmail.com">MichaelLaff10211@gmail.com</a></td>
+            </tr>
+            <tr>
+            <td>Reed Percelay</td>
+            <td><a href="mailto:Reedpercelay@gmail.com">Reedpercelay@gmail.com</a></td>
+            </tr>
+            <tr>
+            <td>Alphonse Vota</td>
+            <td><a href="mailto:allieboy2402@gmail.com">allieboy2402@gmail.com</a></td>
+            </tr>
+            </table>
             </div>
         </div>    
     </div>
-    
 </body>
 </html>
