--- a/Stinger-Website/website/views/login.ejs
+++ b/Stinger-Website/website/views/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <%#Navigation Bar%>
+<!--Navigation Bar-->
     <%- include('./partials/nav-bar.ejs') %>
 
 
@@ -26,4 +26,5 @@
     <a id='signup', href='signup'>New to Stinger? Join us here.</p>
 </form>
 </body>
+<script src="script.js"></script>
 </html>
