--- a/Stinger-Website/website/views/profile1.ejs
+++ b/Stinger-Website/website/views/profile1.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <%#Navigation Bar%>
+<!--Navigation Bar-->
     <%- include('./partials/nav-bar.ejs') %>
  
 
@@ -19,7 +19,7 @@
 </head>
 <body id="wrapper">
 
-<%#Sample Profile Page%>
+<!--Sample Profile Page-->
 
 <h2 style= "text-align: left">Name: Frank Deamatro</h2>   
 <h1 style= "text-align: left">User Name: @FrankfurterDeamatro</h1> 
