--- a/Stinger-Website/website/views/signup.ejs
+++ b/Stinger-Website/website/views/signup.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <%#Navigation Bar%>
+    <!--Navigation Bar-->
     <%- include('./partials/nav-bar.ejs') %>
 
 
@@ -15,7 +15,7 @@
 <body id="wrapper">
     <br>
     <h1 id='stinger'>Stinger</h1>
-<%#The login boxes to sign up within the website%>
+<!--The login boxes to sign up within the website-->
     <h2 id='statement'>Welcome to Stinger. Get ready to sting.</h2>
     <form>
         <p id='username'>Username:</p>
