--- a/Stinger-Website/website/views/about.ejs
+++ b/Stinger-Website/website/views/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<%#Navigation Bar%>
+<!--Navigation Bar-->
 	<%- include('./partials/nav-bar.ejs') %>
 
 	<title>About Us Section</title>
